--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "babel-plugin-styled-components": "^2.0.7",
     "gatsby": "^4.23.0",
+    "gatsby-plugin-layout": "^3.23.0",
     "gatsby-plugin-styled-components": "^5.23.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
