--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby": "^4.23.0",
     "gatsby-plugin-layout": "^3.23.0",
     "gatsby-plugin-styled-components": "^5.23.0",
+    "node": "^19.3.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "styled-components": "^5.3.5"
