--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "node": "^19.3.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-swipeable": "^7.0.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
