--- a/package.json
+++ b/package.json
@@ -16,16 +16,18 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^2.0.7",
-    "gatsby": "^4.23.0",
-    "gatsby-plugin-layout": "^3.23.0",
-    "gatsby-plugin-styled-components": "^5.23.0",
+    "gatsby": "^5.3.3",
+    "gatsby-plugin-image": "^3.3.2",
+    "gatsby-plugin-layout": "^4.3.0",
+    "gatsby-plugin-sharp": "^5.3.2",
+    "gatsby-plugin-styled-components": "^6.3.0",
+    "gatsby-source-filesystem": "^5.3.1",
+    "gatsby-transformer-sharp": "^5.3.1",
     "node": "^19.3.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-swipeable": "^7.0.0",
-    "styled-components": "^5.3.5"
-  },
-  "devDependencies": {
-    "gh-pages": "^4.0.0"
+    "slugify": "^1.6.5",
+    "styled-components": "^5.3.6"
   }
 }
