--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-transformer-sharp": "^5.3.1",
     "node": "^19.3.0",
     "react": "^18.2.0",
+    "react-code-blocks": "^0.0.9-0",
     "react-dom": "^18.2.0",
     "react-swipeable": "^7.0.0",
     "slugify": "^1.6.5",
